完成初始化的全部流程
